--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -115,4 +115,4 @@
 <pre>{{ myForm.value.password | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ myForm.value.matchpass | json }}</pre>
+<pre>{{ myForm.controls['matchpass'].errors | json }}</pre>
